--- a/src/style.css
+++ b/src/style.css
@@ -23,7 +23,7 @@
   --clr-neutral-200:#D4D3D9;
   --clr-neutral-0:#FFFFFF;
   --clr-orange-500:#FF820A;
-  --clr-blue-500:#FF820A;
+  --clr-blue-500:#2B1B9C;
   --clr-blue-700:#2B1B9C;
   /*fonts*/
   --ff-bricolage-grotesque:'Bricolage Grotesque','system-ui','sans-serif';
